# simple_tarde

./: .gitignore  Dockerfile  LICENSE  README.md  airflow.cfg  docker-compose.yaml  init_airflow.sh  pyproject.toml
plugins/: gunicorn_config.py
