[tool.poetry]
name = "simple-tarde"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
apache-airflow = "^2.10.4"
apache-airflow-providers-postgres = "^5.14.0"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
